syntax = "proto3";

package news;

option go_package = "news.v1;newsv1";

service News{
    rpc SaveArticle (SaveArticleRequest) returns (SaveArticleResponse);
    rpc GetArticles (GetArticlesRequest) returns (GetArticlesResponse);
	rpc GetNewestArticle (GetNewestArticleRequest) returns (GetNewestArticleResponse);
}

message SaveArticleRequest {
    int64 user_id = 1;
    string link = 2;
}

message SaveArticleResponse {
}

message GetArticlesRequest {
}

message Article {    
	int64 article_id = 1;   
	string user_name = 2; 
	string source_name = 3;
	string title = 4;
	string link = 5;
	string excerpt = 6;
	string image_url = 7;
	string posted_at = 8;
}

message GetArticlesResponse {
    repeated Article Articles = 1;
}

message GetNewestArticleRequest {
}

message GetNewestArticleResponse {
	Article Articl =1;
}
